(07/30/07)

*** All simple types are now passed around inside of DSHandle objects,
    instead of sometimes inside DSHandles and sometimes as rawer Java
    objects.

*** Swift operators now implemented in their own class, rather than using
    the Karajan implementation.

*** There are now two division operators, / and %/ of which the first (/)
    returns a floating point value and %/ returns an integer value.
    The mod operator is relabelled %% instead of %.
    
*** Mappers can now map files on remote sites (use protocol://host/path)
    for file name(s), and the engine can actually stage things in and out
    from/to arbitrary locations
    
*** Moved some path manipulation function to Java

(07/29/07)

*** Use /dev/urandom by default on UNIX platforms to avoid large
    delays at start-up (and Yoya knows when else). It will lower the
    security of anything that relies on java.security.SecureRandom 
    for RNG, but there is no nice way to initialize different SecureRandom
    instances with different seed generators.

(07/28/07)

*** Removed break; statement from the language. It was previously unimplemented
    and acted as a no-op. Any code which now does not compile can be made to
    compile by removing the break statements. No other changes should be
    necessary, and no behavioural changes should result.

(07/19/07)

*** Swift 0.2 release made from Swift SVN r915 and CoG SVN r1658

(05/21/07)

*** Add a mapper, array_mapper, which maps from a string array of filenames.
    This was requested in bug 27.

(04/27/07)

*** Fixed a deadlock in the remote caching code.

(04/12/07)

*** Marker types (that is, types with no content) can now be specified without
    an empty {} block. So what was previous written as:

      type imagefile {};

    can now be written as

      type imagefile;

(04/11/07)

*** CSV mapper will now take commas as a field separator (in addition to the
    existing behaviour of space and tab)

(03/23/07)

*** Fixed -resume
